revert: keep platform threads for long-lived threads, virtual only where beneficial